syntax = "proto3";
package org.minigamzreborn.bytelyplay.protobuffer.packets.c2s;

import "packets/c2s/HandShakePacketC2S.proto";
import "packets/c2s/RegisterServerPacketC2S.proto";
import "packets/c2s/UnregisterServerPacketC2S.proto";
import "packets/c2s/TransferPlayerPacketC2S.proto";
import "packets/c2s/DisconnectPacketC2S.proto";

message WrappedPacketC2S {
  oneof body {
    HandShakePacketC2S handShake = 1;
    RegisterServerPacketC2S registerServerPacket = 2;
    UnregisterServerPacketC2S unregisterServerPacket = 3;
    TransferPlayerPacketC2S transferPlayerPacket = 4;
    DisconnectPacketC2S disconnectPacket = 5;
  }
}